--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,147 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap');
+
+* { 
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --soft-blue: hsl(215, 51%, 70%);
+  --cyan: hsl(178, 100%, 50%);
+  --main-bg: hsl(217, 54%, 11%);
+  --card-bg: hsl(216, 50%, 16%);
+  --line: hsl(215, 32%, 27%);
+}
+
+body{
+  height: 100vh;
+  background: var(--main-bg);
+  color: var(--soft-blue);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Outfit', sans-serif;
+  font-size: 18px;
+}
+
+/*Main section*/
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 330px;
+  background: var(--card-bg);
+  padding: 1.5rem;
+  border-radius: 1rem;
+}
+
+.image-container{
+  width: 290px;
+  height: 290px;
+  position: relative;
+  background: var(--cyan);
+  border-radius: 1rem;
+}
+
+.nft-image{
+  width: 100%;
+  border-radius: 0.8rem;
+  opacity: 1;
+  transition: .5s ease;
+}
+
+.view-icon {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.image-container:hover .nft-image {
+  opacity: 0.5;
+}
+
+.image-container:hover .view-icon {
+  opacity: 1;
+}
+
+.title{
+  width: 100%;
+  margin: 1rem 0;
+  color: white;
+  font-size: 1.2rem;
+}
+
+.desc { 
+  width: 100%;
+  margin-bottom: 1rem;
+  font-size: 1rem;
+  letter-spacing: 0.05rem;
+}
+
+.info{
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.eth{
+  display: flex;
+  align-items: center;
+  margin-right: auto;
+  color: var(--cyan);
+}
+
+.days{
+  display: flex;
+  align-items: center;
+}
+
+.eth > img, .days >img {
+  margin-right: 0.35rem;
+}
+
+hr{
+  width: 100%;
+  margin: 1rem 0;
+  border: 1px solid var(--line);
+}
+
+.creator{
+  display: flex;
+  align-items: center;
+}
+
+.creator > img{
+  width: 40px;
+  border: 1px solid white;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+
+.creator-name{
+  color: white;
+}
+
+/*Footer section*/
+footer{
+  margin: 1rem 0;
+}
+
+.attribution { font-size: 0.8rem; text-align: center;}
+.attribution a { color: white; }
+
+/*Active states*/
+.creator-name:hover , .title:hover{
+  color: var(--cyan);
+  cursor: pointer;
+}
+
+.nft-image:hover{
+  cursor: pointer;
 }
